--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.2",
     "react-swipeable-views": "^0.14.0"
   },
@@ -24,3 +25,4 @@
     "vite": "^4.0.0"
   }
 }
+
